--- a/docs/pg_sprite.css
+++ b/docs/pg_sprite.css
@@ -1,3 +1,41 @@
+.pg_style_lightning{color:#6A4F8C}
+.pg_style_loseOrb{color:#bf1e2e}
+.pg_style_upgradeOrb{color:#deb100}
+.pg_style_heal{color:#55a000}
+.pg_style_bramble{color:#179017}
+.pg_style_damage{color:#bf1e2e}
+.pg_style_slime{color:#53930c}
+.pg_style_objectOfInterest{color:#fffa97}
+.pg_style_fire{color:#feae34}
+.pg_style_stone{color:#9baea4}
+.pg_style_peglin{color:#87A340}
+.pg_style_crystal{color:#af38ff}
+.pg_style_egg{color:#e2d7b5}
+.pg_style_blind{color:#59307d}
+.pg_style_confuse{color:#c8640e}
+.pg_style_water{color:#51d5dd}
+.pg_style_durable{color:#e87b22}
+.pg_style_persist{color:#007e3c}
+.pg_style_dmg_bonus{color:#006A00}
+.pg_style_dmg_negative{color:#840000}
+.pg_style_orberos{color:#ba523d}
+.pg_style_multiball{color:#b81a5e}
+.pg_style_enemyBonusDmg{color:#d15454}
+.pg_style_enemyNegDmg{color:#4978c1}
+.pg_style_echo{color:#4c7ced}
+.pg_style_strength{color:#953033}
+.pg_style_refresh{color:#3c9b10}
+.pg_style_finesse{color:#ffd26b}
+.pg_style_balance{color:#1d00d1}
+.pg_style_dexterity{color:#2692a6}
+.pg_style_shield{color:#0086ff}
+.pg_style_hit{color:#180057}
+.pg_style_activate{color:#180057}
+.pg_style_pop{color:#180057}
+.pg_style_destroy{color:#B30900}
+.pg_style_pierce{color:#91d0e4}
+.pg_style_heal2{color:#006A00}
+.pg_style_overflow{color:#6A0000}
 
 .pg_sprite{
     image-rendering:pixelated;
