(try to )add orb sprite

--- a/templates/orb.html.mustache
+++ b/templates/orb.html.mustache
@@ -1,9 +1,11 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="pg_sprite.css">
+        <link rel="stylesheet" type="text/css" href="pg_orb_sprite.css">
     </head>
     <body>
         {{#orbs}}
+            <div class="orb_pic_{{sprite}}"></div>
             <b>{{name}}({{level}})</b><br>
             <div class='pg_sprite pg_sprite_PEG'></div>{{dmg}}|<div class='pg_sprite pg_sprite_CRIT_PEG'></div>{{cdmg}}<br>
             {{#descs}}
