--- a/templates/pg_sprite.css.mustache
+++ b/templates/pg_sprite.css.mustache
@@ -10,6 +10,7 @@
 {{#glyphs}}
 .pg_sprite_{{name}}{
     transform: scale({{scale}});
+    margin: {{margin}}px;
     background-position: -{{left}}px -{{top}}px;
     width: {{width}}px;
     height: {{height}}px;
