--- a/templates/pg_orb_sprite.css.mustache
+++ b/templates/pg_orb_sprite.css.mustache
@@ -1,5 +1,5 @@
 {{#assets}}
-.orb_pic_{{style}}{
+.pg_pic_{{style}}{
     image-rendering:pixelated;
     background-image: url("pg_assets/{{file}}");
     {{^has_rect}}
