--- a/templates/relic.html.mustache
+++ b/templates/relic.html.mustache
@@ -12,10 +12,10 @@
   </head>
   <body>
     <div class="container">
-        <h1>弹珠列表</h1>
+        <h1>遗物列表</h1>
         <hr>
         <div class="row row-cols-auto">
-        {{#orbs}}
+        {{#relics}}
             <div class="col">
             <div class="card" style="width: 18rem;margin:8px;">
                 <div style="text-align:center">
@@ -24,17 +24,22 @@
                 </div></div>
                 <div class="card-body">
                 <div style="text-align:center">
-                  <h5 class="card-title">{{name}}({{level}})</h5>
+                  <h5 class="card-title">{{locName}}</h5>
                   <p class="card-text"><div class='pg_sprite pg_sprite_PEG' style="transform:scale(2);margin:3px 10px;"></div>{{dmg}}&nbsp;&nbsp;<div class='pg_sprite pg_sprite_CRIT_PEG' style="transform:scale(2);margin:3px 10px;"></div>{{cdmg}}</p>
                 </div>
+                    {{#pool}}
+                    {{#pool.CommonRelics}}CommonRelics<br/>{{/pool.CommonRelics}}
+                    {{#pool.BossRelics}}BossRelics<br/>{{/pool.BossRelics}}
+                    {{#pool.DebugRelics}}DebugRelics<br/>{{/pool.DebugRelics}}
+                    {{#pool.RareRelics}}RareRelics<br/>{{/pool.RareRelics}}
+                    {{#pool.RareRelicsScenarioOnly}}RareRelicsScenarioOnly<br/>{{/pool.RareRelicsScenarioOnly}}
+                    {{/pool}}
 
-                    {{#descs}}
-                        <div style="margin-top:3px"> {{{desc}}} </div>
-                    {{/descs}}
+                    <div style="margin-top:3px"> {{{locDesc}}} </div>
                 </div>
             </div>
             </div>
-        {{/orbs}}
+        {{/relics}}
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
