--- a/templates/relic.html.mustache
+++ b/templates/relic.html.mustache
@@ -34,6 +34,8 @@
                         {{#pool.RareRelicsScenarioOnly}}  <span style="font-size:0.5rem;" class="badge rounded-pill text-bg-dark">剧情</span>     {{/pool.RareRelicsScenarioOnly}}
                       {{/pool}}
                     </h5>
+                  </div>
+                  <div>
                     <div style="margin-top:3px"> {{{locDesc}}} </div>
                   </div>
                 </div>
