--- a/templates/relic.html.mustache
+++ b/templates/relic.html.mustache
@@ -35,9 +35,8 @@
                       {{/pool}}
                     </h5>
                   </div>
-                  <div>
-                    <div style="margin-top:3px"> {{{locDesc}}} </div>
-                  </div>
+                  <hr />
+                  <div> {{{locDesc}}} </div>
                 </div>
               </div>
             </div>
