--- a/templates/relic.html.mustache
+++ b/templates/relic.html.mustache
@@ -37,6 +37,17 @@
                   </div>
                   <hr />
                   <div> {{{locDesc}}} </div>
+                  {{#has_keywords}}
+                  <div class="card-footer">
+                    {{#keywords}}
+                      {{{keyword_desc}}}
+                      {{^last?}}
+                        <hr/>
+                      {{/last?}}
+                    {{/keywords}}
+                  </div>
+                {{/has_keywords}}
+
                 </div>
               </div>
             </div>
