--- a/docs/pg_orb_sprite.css
+++ b/docs/pg_orb_sprite.css
@@ -646,10 +646,11 @@
 .pg_pic_Clock_21300000{
     image-rendering:pixelated;
     background-image: url("pg_assets/Clock.png");
-    width:80px;
-    height:80px;
-    transform:scale(0.4);
-    margin:-24.0px;
+    width:16px;
+    height:16px;
+    background-position: -0px -0.0px;
+    transform:scale(2.0);
+    margin:8.0px;
 }
 .pg_pic_corn_21300000{
     image-rendering:pixelated;
