--- a/templates/relic.html.mustache
+++ b/templates/relic.html.mustache
@@ -29,8 +29,8 @@
                       {{#pool}}
                         {{#pool.CommonRelics}}            <span style="font-size:0.5rem;" class="badge rounded-pill text-bg-secondary">普通池</span>               {{/pool.CommonRelics}}
                         {{#pool.BossRelics}}              <span style="font-size:0.5rem;" class="badge rounded-pill text-bg-success">Boss池</span>                 {{/pool.BossRelics}}
-                        {{#pool.DebugRelics}}             <span style="font-size:0.5rem;" class="badge rounded-pill text-bg-light">Debug池</span>                {{/pool.DebugRelics}}
                         {{#pool.RareRelics}}              <span style="font-size:0.5rem;" class="badge rounded-pill text-bg-warning">稀有池</span>                 {{/pool.RareRelics}}
+                        {{#pool.DebugRelics}}             <!--span style="font-size:0.5rem;" class="badge rounded-pill text-bg-light">Debug池</span-->                {{/pool.DebugRelics}}
                         {{#pool.RareRelicsScenarioOnly}}  <span style="font-size:0.5rem;" class="badge rounded-pill text-bg-dark">剧情</span>     {{/pool.RareRelicsScenarioOnly}}
                       {{/pool}}
                     </h5>
