--- a/templates/relic.html.mustache
+++ b/templates/relic.html.mustache
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="container">
-        <h1>遗物列表</h1><h5><a href="orb.html">弹珠列表</a></h5><div class="badge fs-6 bg-primary">游戏版本:{{version}}</div>
+        <h1>遗物列表</h1><h5><a href="orb.html">弹珠列表</a></h5><div class="badge bg-primary">游戏版本:{{version}}</div>
         <hr>
         <div class="row row-cols-auto">
         {{#relics}}
