orb pool display name

--- a/templates/orb.html.mustache
+++ b/templates/orb.html.mustache
@@ -28,22 +28,22 @@
                   <h5 class="card-title">{{name}}({{level}})
                       {{#pool}}
                         {{#pool.AvailableOrbs}}
-                                      <span style="font-size:0.5rem;" class="badge rounded-pill text-bg-secondary">AvailableOrbs</span>
+                                      <span style="font-size:0.5rem;" class="badge rounded-pill text-bg-secondary">拾取池</span>
                         {{/pool.AvailableOrbs}}
                         {{#pool.Brambles}}
-                                      <span style="font-size:0.5rem;" class="badge rounded-pill text-bg-secondary">Brambles</span>
+                                      <span style="font-size:0.5rem;" class="badge rounded-pill text-bg-secondary">荆棘</span>
                         {{/pool.Brambles}}
                         {{#pool.MirrorbPool}}
-                                      <span style="font-size:0.5rem;" class="badge rounded-pill text-bg-secondary">MirrorbPool</span>
+                                      <span style="font-size:0.5rem;" class="badge rounded-pill text-bg-secondary">镜像池</span>
                         {{/pool.MirrorbPool}}
                         {{#pool.OrborosPool}}
-                                      <span style="font-size:0.5rem;" class="badge rounded-pill text-bg-secondary">OrborosPool</span>
+                                      <span style="font-size:0.5rem;" class="badge rounded-pill text-bg-secondary">衔尾池</span>
                         {{/pool.OrborosPool}}
                         {{#pool.PotentialLightningScenarioOrbs}}
-                                      <span style="font-size:0.5rem;" class="badge rounded-pill text-bg-secondary">PotentialLightningScenarioOrbs</span>
+                                      <span style="font-size:0.5rem;" class="badge rounded-pill text-bg-secondary">闪电场景</span>
                         {{/pool.PotentialLightningScenarioOrbs}}
                         {{#pool.Stones}}
-                                      <span style="font-size:0.5rem;" class="badge rounded-pill text-bg-secondary">Stones</span>
+                                      <span style="font-size:0.5rem;" class="badge rounded-pill text-bg-secondary">石头</span>
                          {{/pool.Stones}}
                       {{/pool}}
                   </h5>
