--- a/templates/relic.html.mustache
+++ b/templates/relic.html.mustache
@@ -36,17 +36,17 @@
                     </h5>
                   </div>
                   <hr />
-                  <div> {{{locDesc}}} </div>
+                  <ul class="list-group list-group-flush"> <li class="list-group-item">{{{locDesc}}}</li> </ul>
                   {{#has_keywords}}
-                  <div class="card-footer">
-                    {{#keywords}}
-                      {{{keyword_desc}}}
-                      {{^last?}}
-                        <hr/>
-                      {{/last?}}
-                    {{/keywords}}
-                  </div>
-                {{/has_keywords}}
+                      <div class="alert alert-primary">
+                      {{#keywords}}
+                          {{{keyword_desc}}}
+                          {{^last?}}
+                            <hr/>
+                          {{/last?}}
+                      {{/keywords}}
+                      </div>
+                  {{/has_keywords}}
 
                 </div>
               </div>
