--- a/templates/orb.html.mustache
+++ b/templates/orb.html.mustache
@@ -48,6 +48,22 @@
                          {{/pool.Stones}}
                       {{/pool}}
                   </h5>
+
+                  {{#has_tutorial}}
+                    <button class="btn btn-link" type="button" data-bs-toggle="collapse" data-bs-target="#tutorial_{{name}}_{{level}}" aria-expanded="false" aria-controls="tutorial_{{name}}_{{level}}">
+                      教程
+                    </button>
+                    <div class="collapse" id="tutorial_{{name}}_{{level}}">
+                      <div class="alert alert-secondary">
+                        {{#tutorial}}
+                          {{{desc}}}
+                          {{^last}}
+                          <hr/>
+                          {{/last}}
+                        {{/tutorial}}
+                      </div>
+                    </div>
+                    {{/has_tutorial}}
                   <p class="card-text"><div class='pg_sprite pg_sprite_PEG' style="transform:scale(2);margin:3px 10px;"></div>{{dmg}}&nbsp;&nbsp;<div class='pg_sprite pg_sprite_CRIT_PEG' style="transform:scale(2);margin:3px 10px;"></div>{{cdmg}}</p>
                 </div>
                 <hr/>
@@ -66,16 +82,7 @@
                         {{/keywords}}
                         </div>
                     {{/has_keywords}}
-                    {{#has_tutorial}}
-                      <div class="alert alert-secondary">
-                        {{#tutorial}}
-                          {{{desc}}}
-                          {{^last}}
-                          <hr/>
-                          {{/last}}
-                        {{/tutorial}}
-                      </div>
-                    {{/has_tutorial}}
+                   
                 </div>
             </div>
             </div>
