--- a/templates/orb.html.mustache
+++ b/templates/orb.html.mustache
@@ -57,7 +57,7 @@
                   </h5>
                   {{#has_tutorial}}
                     <div class="collapse" id="tutorial_{{name}}_{{level}}">
-                      <div class="alert alert-secondary">
+                      <div class="alert alert-secondary" style="text-align:left">
                         {{#tutorial}}
                           {{{desc}}}
                           {{^last}}
