--- a/templates/pg_sprite.css.mustache
+++ b/templates/pg_sprite.css.mustache
@@ -6,6 +6,7 @@
     image-rendering:pixelated;
     background-image: url('atlas.png');
     display:inline-block;
+    vertical-align: middle;
 }
 {{#glyphs}}
 .pg_sprite_{{name}}{
