--- a/templates/orb.html.mustache
+++ b/templates/orb.html.mustache
@@ -22,8 +22,9 @@
             <div class="col col-sm-12 col-md-4">
             <div class="card" style="margin:8px;">
                 <div style="text-align:center">
-                <div style="width:fit-content;margin:10px auto">
-                    <div class="pg_pic_{{sprite}}"></div>
+                <div style="width:76px; height:84px;margin:25px auto 0px auto;position:relative;">
+                    <div style="background:url(SmallBrownBox.png);width:38px;height:42px;margin:19px 21px;position:absolute;transform:scale(2);image-rendering:pixelated;"></div>
+                    <div class="pg_pic_{{sprite}}" style="position:absolute;left:21.5px;top:22px"></div>
                 </div></div>
                 <div class="card-body">
                 <div style="text-align:center">
