--- a/templates/index.html.mustache
+++ b/templates/index.html.mustache
@@ -9,7 +9,11 @@
   </head>
   <body>
     <div class="container">
-        <h1>哥布林弹球在线图鉴</h1><div class="badge bg-primary">游戏版本:{{version}}</div><div class="badge bg-secondary">正在装修</div>
+        <h1>哥布林弹球在线图鉴</h1><div class="badge bg-primary">游戏版本:{{version}}</div>
+        {{#online_version}}
+          <div class="badge bg-success">在线本地化文档版本:{{online_version}}</div>
+        {{/online_version}}
+        <div class="badge bg-secondary">正在装修</div>
         <hr>
         <a class="btn btn-link" href="orb.html">弹珠列表</a>
         <a class="btn btn-link" href="relic.html">遗物列表</a>
