--- a/templates/online_check.html.mustache
+++ b/templates/online_check.html.mustache
@@ -9,15 +9,21 @@
   </head>
   <body>
     <div class="container">
-        <h1>哥布林弹球在线图鉴</h1><div class="badge bg-primary">游戏版本:{{version}}</div>
-        {{#online_version}}
-          <a href="online_check.html" class="link-light badge bg-success">在线本地化文档版本:{{online_version}}</a>
-        {{/online_version}}
-        <div class="badge bg-secondary">正在装修</div>
-        <hr>
-        <a class="btn btn-link" href="orb.html">弹珠列表</a>
-        <a class="btn btn-link" href="relic.html">遗物列表</a>
+        <h1>哥布林弹球在线图鉴/在线文档版本检查</h1>
 
+        <p>报告时间：{{report_date}}</p>
+
+        <p>当前在线本地化文档版本:{{online_cache_version}}</p>
+        <p>最新在线本地化文档版本:{{online_version}}</p>
+
+        <p>
+          {{#need_update}}
+            在线文档该更新了！请等待作者重新构建此工程。
+          {{/need_update}}
+          {{^need_update}}
+            文档已是最新版本，无需更新。
+          {{/need_update}}
+        </p>
         <hr />
 
         <p>本图鉴内容由程序根据游戏代码自动生成，程序作者frto027(<a href="https://gitee.com/frto027">gitee</a>，<a href="https://github.com/frto027">github</a>，<a href="https://space.bilibili.com/11948678">bilibili</a>)。</p>
