--- a/templates/online_check.html.mustache
+++ b/templates/online_check.html.mustache
@@ -13,7 +13,7 @@
 
         <p>报告时间：{{report_date}}</p>
 
-        <p>当前在线本地化文档版本:{{online_cache_version}}</p>
+        <p>图鉴使用的在线本地化文档版本:{{online_cache_version}}</p>
         <p>最新在线本地化文档版本:{{online_version}}</p>
 
         <p>
