--- a/templates/index.html.mustache
+++ b/templates/index.html.mustache
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>哥布林弹球在线图鉴</h1><div class="badge bg-primary">游戏版本:{{version}}</div>
         {{#online_version}}
-          <a href="online_check.html" class="link-light badge bg-success">在线本地化文档版本:{{online_version}}</a>
+          <a href="https://frto027.github.io/peglin-desc-extracter/online_check.html" class="link-light badge bg-success">在线本地化文档版本:{{online_version}}</a>
         {{/online_version}}
         <div class="badge bg-secondary">正在装修</div>
         <hr>
