--- a/templates/online_check.html.mustache
+++ b/templates/online_check.html.mustache
@@ -18,7 +18,7 @@
 
         <p>
           {{#need_update}}
-            游戏的本地化文档更新了！请等待作者重新构建此工程。
+            游戏的本地化文档更新了！在线文档已自动更新。若存在游戏版本相关更新，请等待作者重建此工程。
           {{/need_update}}
           {{^need_update}}
             {{#version_consist}}
