online check addr

--- a/templates/relic.html.mustache
+++ b/templates/relic.html.mustache
@@ -14,7 +14,7 @@
     <div class="container">
         <h1>遗物列表</h1><h5><a href="orb.html">弹珠列表</a></h5><div class="badge bg-primary">游戏版本:{{version}}</div>
         {{#online_version}}
-          <a href="https://frto027.github.io/peglin-desc-extracter/online_check.html" class="link-light badge bg-success">在线本地化文档版本:{{online_version}}</a>
+          <a href="online_check.html" class="link-light badge bg-success">在线本地化文档版本:{{online_version}}</a>
         {{/online_version}}
         <hr>
         <div class="row row-cols-auto">
